--- a/themes/gartenzwerge/css/forms.css
+++ b/themes/gartenzwerge/css/forms.css
@@ -195,7 +195,7 @@ select option[val="rot"]{
 	color:#636A63;}
 
 /** Login/Registrierung - Formular **/
-#regForm, #loginForm, #profilForm, #userEditForm{
+#regForm, #loginForm, #profilForm, #userEditForm, #contactForm{
 	clear:both;
 	float:left;
 	margin-bottom:50px;}
@@ -212,7 +212,7 @@ select option[val="rot"]{
 	float:left;
 	margin-left:280px;}
 
-#regForm label, #loginForm label, #profilForm label, #userEditForm label, #articleEditForm > div > div > label{
+#regForm label, #loginForm label, #contactForm label, #profilForm label, #userEditForm label, #articleEditForm > div > div > label{
   background-color: #636A63;
   color: #BCC2BA;
   float: left;
@@ -230,7 +230,7 @@ select option[val="rot"]{
  #articleEditForm > div > div > label{
 	 width:120px !important;}
 
-#regForm input, #regForm select, #loginForm input, #profilForm input, #profilForm select, #userEditForm input, #articleEditForm > div > div > input, #articleEditForm > input, #articleEditForm select{
+#regForm input, #regForm select, #loginForm input, #contactForm input, #profilForm input, #profilForm select, #userEditForm input, #articleEditForm > div > div > input, #articleEditForm > input, #articleEditForm select{
   background-color: #BCC2BA;
   color: #636A63;
   float: left;
@@ -246,7 +246,7 @@ select option[val="rot"]{
 #articleEditForm input{
 	width:130px !important;}
 
-#articleEditForm textarea{
+#articleEditForm textarea, #contactForm textarea{
 	 background-color: #BCC2BA;
   	color: #636A63;
  	 float: left;
@@ -257,6 +257,7 @@ select option[val="rot"]{
   width:580px;
   border:thin solid #636A63;
   border-radius:15px;
+  margin-bottom:20px;
 	}
 
 #regForm select{
@@ -834,7 +835,7 @@ input.submit:hover{
 	clear:both;}
 
 #articleForm input.menge{
-	background-color:rgba(255,255,255,10);
+	background-color:#BCC2BA;);
 	border:thin solid #535d54;
 	width:80px;
 	text-align:center;
