--- a/themes/gartenzwerge/css/content.css
+++ b/themes/gartenzwerge/css/content.css
@@ -155,6 +155,13 @@ dt { float:left; cear:left; width:10em; }
 .orderInfos div span{
 	min-width:100px !important;}
 
+.orderListItemWrapper .orderInfos div:nth-child(1) span{
+	min-width:170px !important;}
+	
+
+.orderListItemWrapper .orderInfos div:nth-child(3) span{
+	min-width:70px !important;}
+
 /** userShowWrapper **/
 #userShowWrapper{
 	 clear: both;
