--- a/themes/gartenzwerge/css/basic.css
+++ b/themes/gartenzwerge/css/basic.css
@@ -165,6 +165,24 @@ body{
 	line-height:30px;
 	font-size:18px;}
 
+#wellcome {
+  height: 500px;
+  position: absolute;
+  width: 1000px;
+}
+
+#wellcomeText{
+	position:relative;
+	float:left;
+	width:800px;
+	font-size:20px;
+	margin-left:100px;
+	text-align:center;
+	}
+
+#wellcomeText a{
+	color:#D8A758;}
+
 #suche{
 	float:right;
 	height:30px;
